Resolve jdk9 compile error
Change-Id: I55fe69683f823aa51aa2e5ef79a17e7e3aef652b